--- a/themes/jms_molla/assets/scss/base/_base.scss
+++ b/themes/jms_molla/assets/scss/base/_base.scss
@@ -272,7 +272,7 @@ img {
         }
     }
 }
-.pb-categorytab{
+.pb-categorytab, .pb-producttab{
     .product-miniature{
         margin-bottom: 1.5rem;
     }
