--- a/themes/jms_molla/assets/scss/elements/_buttons.scss
+++ b/themes/jms_molla/assets/scss/elements/_buttons.scss
@@ -9,7 +9,6 @@
 		margin-bottom: .3rem;
 	}
 }
-
 .btn {
 	display: inline-flex;
 	align-items: center;
@@ -23,6 +22,7 @@
 	min-width: 170px;
 	border-radius: 0;
 	white-space: normal;
+	border: 1px solid #ebebeb;
 	transition: all 0.3s;
 
 	span {
