--- a/themes/jms_molla/assets/scss/demos/demo-3.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-3.scss
@@ -53,6 +53,10 @@ $secondary-color: #bf913d;
 	.item{
 		height: 100%;
 	}
+	.owl-dots{
+		position: absolute;
+		bottom: -2.8rem;
+	}
 	.owl-carousel.customs .owl-stage-outer{
 		margin: 0;
 		padding: 2rem 0;
@@ -99,6 +103,9 @@ $secondary-color: #bf913d;
 	}
 }
 .h3-producttab{
+	.owl-dots{
+		bottom: -4.8rem;
+	}
 	.nav.nav-tabs{
 		.nav-item{
 			margin: 0 1rem;
@@ -274,7 +281,7 @@ $secondary-color: #bf913d;
 		padding: .9rem .5rem .3rem;
 		margin-left: .8rem;
 		margin-right: .8rem;
-		background-color: #fcb941;
+		background-color: $primary-color;
 		border-radius: .3rem;
 		border: none;
 		margin-bottom: 2rem;
@@ -328,12 +335,12 @@ $secondary-color: #bf913d;
 	justify-content: center;
 	min-height: 48px;
 }
-.pb-categorytab{
+.pb-categorytab, .pb-producttab{
 	.product-miniature{
 		margin-bottom: 0;
 	}
 	.nav.nav-tabs{
-		margin-bottom: .8rem;
+		margin-bottom: 1rem;
 		.nav-item{
 			+ .nav-item{
 			 	margin-left: .2rem;
