--- a/themes/jms_molla/assets/scss/base/_base.scss
+++ b/themes/jms_molla/assets/scss/base/_base.scss
@@ -313,6 +313,47 @@ img {
 }
 
 
+.spinner {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: absolute;
+  border: 5px solid #eee;
+  display: inline-block;
+  
+  // Positioning
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  
+  &:after, &:before {
+    content: '';
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+  
+  &:after {
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    border: 5px solid transparent;
+    border-top-color: #928a8a;
+    animation: spin .5s linear infinite;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 
 /* Animation for lazyload */
 @keyframes rotating {
