--- a/themes/jms_molla/assets/scss/demos/demo-4.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-4.scss
@@ -31,7 +31,12 @@ $secondary-color: #1d84ea;
 .title {
 	font-weight: 600;
 	font-size: 2.4rem;
-	letter-spacing: -.03em;
+	letter-spacing: -.025em;
+}
+.title-absolute{
+	position: absolute;
+	top: 1px;
+	z-index: 9;
 }
 .productbox-2 .content_price .price.new{
 	color: #fcb941;
@@ -139,6 +144,7 @@ $secondary-color: #1d84ea;
 			margin-left: -1rem;
 			text-align: center;
 			min-width: 110px;
+			border: 0;
 			&:hover{
 				color: #fff;
 				background-color: $primary-color;
@@ -408,7 +414,7 @@ $secondary-color: #1d84ea;
 		margin-bottom: 1rem;
 		.nav-item{
 			+ .nav-item{
-			 	margin-left: .5rem;
+			 	margin-left: .1rem;
 			}
 			.nav-link {
 				font-size: 1.4rem;
@@ -427,9 +433,59 @@ $secondary-color: #1d84ea;
 		}
 	}
 }
+.btn-rcm{
+	padding: 0;
+	font-weight: 500;
+	i{
+		font-size: 1.5rem;
+	}
+}
+.category-products.products{
+	.product-miniature{
+		margin-bottom: 2rem;
+	}
+}
+.pb-service-box{
+	.pb-service-title{
+		margin-bottom: .1rem;
+	}
+	.pb-service-description{
+		font-size: 1.6rem;
+		p{
+			font-weight: 300;
+		}
+	}
+}
+.h4-newsletter{
+	.pb-text-content{
+		margin-top: .5rem;
+		margin-bottom: 2.5rem;
+		letter-spacing: 0;
+	}
+	.email_subscription input{
+		color: #777;
+		border-radius: 30px 0 0 30px;
+		&::placeholder{
+			color: #777;
+		}
+	}
+	#newsletter-btn{
+		padding: .85rem 1.5rem;
+		font-weight: 400;
+		border-radius: 0 30px 30px 0;
+		background-color: $primary-color;
+		color: #fff;
+		min-width: 178px;
+		&:hover{
+			background-color: $secondary-color;
+		}
+	}
+}
 
 @media (min-width: 1200px){
 	.btn-more {
 		min-width: 270px;
 	}
 }
+
+
