--- a/themes/jms_molla/assets/scss/pages/_home.scss
+++ b/themes/jms_molla/assets/scss/pages/_home.scss
@@ -697,7 +697,7 @@ button:focus {
 			color: #fff;
 			border-radius: 0;
 			text-transform: uppercase;
-
+			border-color: transparent;
 			&:hover,
 			&:focus {
 				background-color: $primary-color;
@@ -971,3 +971,4 @@ button:focus {
 		}
 	}
 }
+
