--- a/themes/jms_molla/assets/css/custom.css
+++ b/themes/jms_molla/assets/css/custom.css
@@ -5197,7 +5197,7 @@ p {
   #footer.footer-4 .html-2 {
     margin-bottom: 1.1rem; }
   #footer.footer-4 #footer-main {
-    padding-bottom: .5rem; }
+    padding-bottom: 4.9rem; }
   #footer.footer-4 .footer-main {
     padding: 4.4rem 0 2rem; }
   #footer.footer-4 #footer-copyright .cms-page-link {
