--- a/themes/jms_molla/assets/scss/base/footers/_footer.scss
+++ b/themes/jms_molla/assets/scss/base/footers/_footer.scss
@@ -137,7 +137,7 @@
 			margin-bottom: 1.1rem;
 		}
 		#footer-main{
-			padding-bottom: .5rem;
+			padding-bottom: 4.9rem;
 		}
 		.footer-main {
 			padding: 4.4rem 0 2rem;
