--- a/themes/jms_molla/assets/scss/demos/demo-3.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-3.scss
@@ -432,6 +432,10 @@ $secondary-color: #bf913d;
 			line-height: 1.22;
 			letter-spacing: -.01em;
 			margin-bottom: .6rem;
+			transition: color 0.3s ease;
+			&:hover{
+				color: $primary-color;
+			}
 		}
 		.pb-banner-desc{
 			font-weight: 300;
@@ -443,6 +447,7 @@ $secondary-color: #bf913d;
 			margin-top: -.5rem;
 		}
 		.pb-banner-button{
+			border: none;
 			display: inline-block;
 			line-height: 1.3;
 			padding: .3rem 1rem;
@@ -495,17 +500,18 @@ $secondary-color: #bf913d;
 		padding-top: 1.15rem;
 		padding-bottom: 1.15rem;
 	}
+	.text-price{
+		letter-spacing: -.03em;
+	}
 	.intro-price {
-		color: #333333;
-		font-weight: 700;
 		line-height: 1.2;
 		letter-spacing: -.025em;
 		sup {
-			font-size: 2rem;
+			font-size: 0.4em;
 			line-height: 1;
 			font-weight: 400;
 			letter-spacing: -.03em;
-			top: -2.3rem;
+			top: -1.1em;
 		}
 	}
 }
