--- a/themes/jms_molla/modules/gdz_slider/views/css/fractionslider.css
+++ b/themes/jms_molla/modules/gdz_slider/views/css/fractionslider.css
@@ -3,7 +3,7 @@
 	width:100%; height:100%;
 	overflow:visible;
 }
-.slide.intro-slide{
+.slide, .intro-slide{
 	display: none;
 }
 .fraction-slider .slide{
@@ -19,9 +19,11 @@
 }
 
 .fraction-slider .fs_obj{
-	display:block; display:none;
+	display:block; 
+	display:none;
 	position:absolute;
-	top:0px; left:100%;
+	top:0px; 
+	left:100%;
 	z-index:700;
 }
 
@@ -42,53 +44,8 @@
 	/*background:url(../img/fraction/fs.spinner.gif) center center no-repeat transparent;*/
 }
 
-.fs_loader .line {
-	height: 3px;
-	width: 100px;
-	background: #e8e8e8;
-	position: absolute;
-	z-index: 10;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50% , -50%);
-}
-.fs_loader .inner{
-    width: 100%;
-    height: inherit;
-    background: #88724f;
-    animation: slide 2s ease-in-out infinite;
-}
 
-@keyframes slide{
-  0%{
-    transform-origin: left;
-    transform: scalex(0.3);
-  }
-  25%{
-    transform-origin: left;
-    transform: scalex(1);
-  }
-  26%{
-    transform-origin: right;
-    transform: scalex(1);
-  }
-  50%{
-    transform-origin: right;
-    transform: scalex(0.3);
-  }
-  75%{
-    transform-origin: right;
-    transform: scalex(1);
-  }
-  76%{
-    transform-origin: left;
-    transform: scalex(1);
-  }
-  100%{
-    transform-origin: left;
-    transform: scalex(0.3);
-  }
-}
+
 
 /** CONTROLS **/
 .fraction-slider .prev,
